--- a/views/user/blog-list.pug
+++ b/views/user/blog-list.pug
@@ -2,3 +2,19 @@ extends ../layouts/main-layout
 
 block content
     h1 Blog List
+    main    
+        if blogs.length > 0
+            div
+                each blog in blogs 
+                    div
+                        h3 #{blog.title}
+                        h4 #{blog.authour}
+                    p #{blog.content}
+                    div
+                        p #{blog.date}
+                        -const blogId = blog.id
+                        a(href=`/blogs/${blogId}`) Show details
+                        include ../layouts/add-to-favourites
+
+        else    
+            p no Blogs 
