--- a/views/admin/edit-blogs.pug
+++ b/views/admin/edit-blogs.pug
@@ -2,3 +2,23 @@ extends ../layouts/main-layout
 
 block content
     h1 Edit Blog 
+        main 
+            - const isEditMode = isEdit
+            - const editBlog = '/admin/edit-blog'
+            - const addBlog = '/admin/add-blog'
+
+            form(action= isEditMode ? editBlog : addBlog, method="POST")
+                label(for="title") Title
+                input(type="text", name="title" value= isEditMode ? blog.title : '')#title
+                label(for="content") Content
+                input(type="text", name="content"  value= isEditMode ? blog.content : '')#content
+                label(for="imgUrl") Image Url
+                input(type="text", name="imgUrl"  value= isEditMode ? blog.imgUrl : '')#imgUrl
+                label(for="author") Name
+                input(type="text", name="author"  value= isEditMode ? blog.author : '')#author
+            if isEditMode
+                input(type="hidden", name="blogId" value=blog.id)
+                button(type="submit") Edit Blog
+            else 
+                button(type="submit") Add Blog
+
