--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700");
 
 * {
   box-sizing: border-box;
@@ -7,9 +7,120 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
-/* .main-header{}
+main {
+  padding: 1rem;
+  margin: auto;
+}
 
-.main-header__nav{} */
+.centered {
+  text-align: center;
+}
+.align-centered{
+  display: flex;
+  justify-content: center;
+}
+
+.main-header .main-header__nav {
+  background-color: #2a9d8f;
+}
+
+.main-header__nav > ul {
+  display: flex;
+  justify-content: flex-start;
+  background-color: #2a9d8f;
+  margin: 0px;
+  padding: 20px;
+}
+
+.main-header__nav > ul li {
+  list-style: none;
+  margin: 5px 15px 5px 15px;
+}
+
+a {
+  color: #2a9d8f;
+}
+a:hover {
+  color: black;
+}
+.main-header__item > a,
+a {
+  text-decoration: none;
+  font-size: large;
+}
+
+.main-header__item > a {
+  color: white;
+}
+
+.main-header__item a:hover,
+.main-header__item a:active,
+.main-header__item a.active {
+  color: #e9c46a;
+}
+
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  justify-content: center;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 600px;
+  border: 1px solid grey;
+  margin: 2rem;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  border: none;
+}
+.author-title {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+}
+.author-title > h2,
+.author-title.p {
+  padding: 20px;
+}
+
+.authour-title > h2 {
+  font-size: medium;
+}
+.author-title > p {
+  font-size: small;
+  color: grey;
+}
+
+.image-container {
+  width: 100%;
+}
+
+.image-container > img {
+  width: 80%;
+}
+
+.details-img {
+  width: 60%;
+}
+
+.btn {
+  padding: 20px;
+  background-color: #264653;
+  color: white;
+  border: none;
+  border-radius: 10px;
+}
+.delete{
+  background-color: #e63946 ;
+}
+
+.btn:hover {
+  cursor: pointer;
+  background-color: #2a9d8f;
+}
