--- a/views/admin/blogs.pug
+++ b/views/admin/blogs.pug
@@ -6,17 +6,18 @@ block content
         if blogs.length > 0
             div
                 each blog in blogs 
-                    img(src=blog.imgUrl, alt=blog.title)
-                    div
-                        h3 #{blog.title}
-                        h4 #{blog.author}
-                    p #{blog.content}
-                    div
-                        p #{blog.date}
-                    a(href=`/admin/edit-blog/${blog.id}?edit=true`) Edit
-                    form(action="/admin/delete-item" method="POST")
-                        input(type="hidden", name="blogId" value= blog.id) 
-                        button(type="submit") DELETE BLOG
+                    .centered
+                        img.details-img(src=blog.imgUrl, alt=blog.title)
+                        div
+                            h3 #{blog.title}
+                            h4 #{blog.author}
+                        p #{blog.content}
+                        div
+                            p #{blog.date}
+                        a(href=`/admin/edit-blog/${blog.id}?edit=true`) Edit
+                        form(action="/admin/delete-item" method="POST")
+                            input(type="hidden", name="blogId" value= blog.id) 
+                            button.btn.delete(type="submit") DELETE BLOG
         else    
             p no Blogs yet 
 
