--- a/views/layouts/add-to-favourites.pug
+++ b/views/layouts/add-to-favourites.pug
@@ -1,3 +1,3 @@
 form(action="/favourites" method="POST") 
     input(type="hidden", name="blogId" value= blogId)
-    button(type="submit") Add to Favourites
+    button.btn(type="submit") Add to Favourites
